@@ -1099,4 +1099,7 @@
 
 20110320:  Fixed chart panel and group panel add to group functions.
 
-           
+           Added new script Scripts/quote/CSV_QtStalker_Format_Import.pl to import csv files
+           that were previously exported by qtstalker as per request.
+
+
